--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -16,8 +16,43 @@
 
 <body>
     <div class="main-container">
-        <header></header>
+        <header id="header" class="header"> <!-- Header-->
+            <div class="logo">
+                <a>
+                    <img src="./images/logo/Booki.png" alt="logo Booki"> <!-- Logo -->
+                </a>
+            </div>
+            <nav class="menu"> <!-- Barre de navigation -->
+                <ul>
+                    <li><a href="index.html">Hébergements</a></li>
+                    <li><a href="index.html">Activités</a></li>
+                </ul>
+            </nav>
+        </header>
         <main>
+            <div class="formulaire-et-filtre"> 
+                <div class="headline"> <!-- Headline-->
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                </div>
+                <div class="Search-bar"> <!-- Formulaire de recherche-->
+                    <form action="" method="">
+                        <span class="Logo-location"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></span>
+                        <span class="search"><input type="search" name="Location" placeholder="Marseille, France"></span>
+                        <span class="button-rechercher"><button class="button-rechercher">Rechercher <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button></span>
+                    </form>
+                </div>    
+                <div class="Filtres"> <!-- Filtres -->
+                    <h2>Filtres</h2>
+                    <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
+                    <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
+                    <button class="filter-buttons"><i class="fa-solid fa-heart" style="color: #0065fc;"></i>Romantique</button>
+                    <button class="filter-buttons"><i class="fa-solid fa-fire" style="color: #0065fc;"></i>Nos pépites</button>
+                </div>
+                <div class="logements-dispo"> <!-- Nombre de logements disponibles -->
+                    <p><i class="fa-solid fa-info" style="color: #0065fc;"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </div> 
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
