Etape 9 & début de l'étape 10

--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -38,8 +38,8 @@
                 <div class="Search-bar"> <!-- Formulaire de recherche-->
                     <form action="" method="">
                         <span class="Logo-location"><i class="fa-solid fa-location-dot" style="color: #000000;"></i></span>
-                        <span class="search"><input type="search" name="Location" placeholder="Marseille, France"></span>
-                        <span class="button-rechercher"><button class="button-rechercher">Rechercher <i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button></span>
+                        <input type="search" name="Location" placeholder="Marseille, France">
+                       <button class="button-rechercher"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i><span class="texte">Rechercher</span></button>
                     </form>
                 </div>    
                 <div class="Filtres"> <!-- Filtres -->
@@ -216,7 +216,7 @@
                 </section>
             </div>
             <section class="Activites-Marseille"> <!-- Activités à Marseille -->
-                <div class="titre-activités">
+                <div class="titre-activites">
                     <h2>Activités à Marseille</h2>
                 </div>
                 <div class="activites-cards">
@@ -250,10 +250,38 @@
             </section>
         </main>
         <footer> <!-- Footer-->
+            <div class="container">
+                <div class="row">
+                    <div class="footer-col">
+                        <h4>À propos</h4>
+                        <ul>
+                            <li><a href="">Fonctionnement du site</a></li>
+                            <li><a href="">Conditions générales</a></li>
+                            <li><a href="">Données et confidentialité</a></li>
+                        </ul>
+                    </div>
 
+                    <!-- 2nd column -->
+                    <div class="footer-col">
+                        <h4>Nos hébergements</h4>
+                        <ul>
+                            <li><a href="">Fonctionnement du site</a></li>
+                            <li><a href="">Conditions générales</a></li>
+                            <li><a href="">Données et confidentialité</a></li>
+                        </ul>
+                    </div>
 
+                    <!-- 3rd column -->
+                    <div class="footer-col">
+                        <h4>Assistance</h4>
+                        <ul>
+                            <li><a href="">Centre d'aide</a></li>
+                            <li><a href="">Nous contacter</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </footer>
-    </div>
 </body>
 
 </html>
