--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -42,13 +42,13 @@
                        <button class="button-rechercher"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i><span class="texte">Rechercher</span></button>
                     </form>
                 </div>    
-                <div class="Filtres"> <!-- Filtres -->
-                    <h2>Filtres</h2>
-                    <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
-                    <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
-                    <button class="filter-buttons"><i class="fa-solid fa-heart" style="color: #0065fc;"></i>Romantique</button>
-                    <button class="filter-buttons"><i class="fa-solid fa-fire" style="color: #0065fc;"></i>Nos pépites</button>
-                </div>
+                    <div class="Filtres"> <!-- Filtres -->
+                        <h2>Filtres</h2>
+                        <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
+                        <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
+                        <button class="filter-buttons"><i class="fa-solid fa-heart" style="color: #0065fc;"></i>Romantique</button>
+                        <button class="filter-buttons"><i class="fa-solid fa-fire" style="color: #0065fc;"></i>Nos pépites</button>
+                    </div>
                 <div class="logements-dispo"> <!-- Nombre de logements disponibles -->
                     <p><i class="fa-solid fa-info" style="color: #0065fc;"></i>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
@@ -272,9 +272,8 @@
                     <div class="footer-col">
                         <h4>Nos hébergements</h4>
                         <ul>
-                            <li><a href="">Fonctionnement du site</a></li>
-                            <li><a href="">Conditions générales</a></li>
-                            <li><a href="">Données et confidentialité</a></li>
+                            <li><a href="">Charte qualité</a></li>
+                            <li><a href="">Proposer votre hôtel</a></li>
                         </ul>
                     </div>
 
