--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -50,9 +50,16 @@
                     </form>
                 </div>    
                     <div class="Filtres"> <!-- Filtres -->
+                        <div class="filtre-title">
                         <h2>Filtres</h2>
-                        <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
-                        <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
+                        </div>
+                        <div class="filtres-texte">
+                            <div class="eco-fam">
+                                <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
+                                <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
+                            </div>
+                        </div>
+                        
                         <button class="filter-buttons"><i class="fa-solid fa-heart" style="color: #0065fc;"></i>Romantique</button>
                         <button class="filter-buttons"><i class="fa-solid fa-fire" style="color: #0065fc;"></i>Nos pépites</button>
                     </div>
