--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -51,21 +51,33 @@
                 </div>    
                     <div class="Filtres"> <!-- Filtres -->
                         <div class="filtre-title">
-                        <h2>Filtres</h2>
+                        <h3>Filtres</h3>
                         </div>
                         <div class="filtres-texte">
                             <div class="eco-fam">
-                                <button class="filter-buttons"><i class="fa-solid fa-money-bill-wave" style="color: #0065fc;"></i>Economique</button>
-                                <button class="filter-buttons"><i class="fa-solid fa-person" style="color: #0065fc;"></i>Familial</button>
+                                <div class="eco">
+                                    <i class="fa-solid fa-money-bill-wave fa-lg" style="color: #0065fc;"></i><h4>Economique</h4>
+                                </div>
+                                <div class="fam">
+                                <i class="fa-solid fa-person fa-lg" style="color: #0065fc;"></i><h4>Familial</h4>
+                                </div>
+                            </div>
+                            <div class="rom-pep">
+                                <div class="rom">
+                                    <i class="fa-solid fa-heart fa-lg" style="color: #0065fc;"></i><h4>Romantique</h4>
+                                </div>
+                                <div class="pep">
+                                   <i class="fa-solid fa-fire fa-lg" style="color: #0065fc;"></i><h4>Nos pépites</h4>
+                                </div>
                             </div>
                         </div>
-                        
-                        <button class="filter-buttons"><i class="fa-solid fa-heart" style="color: #0065fc;"></i>Romantique</button>
-                        <button class="filter-buttons"><i class="fa-solid fa-fire" style="color: #0065fc;"></i>Nos pépites</button>
                     </div>
-                <div class="logements-dispo"> <!-- Nombre de logements disponibles -->
-                    <p><i class="fa-solid fa-info" style="color: #0065fc;"></i>Plus de 500 logements sont disponibles dans cette ville</p>
-                </div>
+                <section class="info-bar">
+                    <div class="i">
+                      <i class="fa-solid fa-info fa-sm" style="color: #0065fc" aria-hidden="true"></i>
+                    </div>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                  </section>
             </div> 
             <div class="hebergements-and-populaires">
                 <section class="hebergements"> <!-- card hébergements -->
