--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -36,17 +36,17 @@
                     <p>En plein centre-ville ou en pleine nature</p>
                 </div>
                 <div class="Search-bar"> <!-- Formulaire de recherche-->
-                    <form action="" method="">
-                        <label for="ville">
-                            <i class="fa-solid fa-location-dot fa-lg" aria-hidden="true" style="color: #000000";></i>
-                          </label>
+                    <form action="javascript:void(0);" method="post">
+                        <label for="Ville">
+                            <i class="fa-solid fa-location-dot fa-lg" aria-hidden="true" style="color:#000000"></i>
+                        </label>
                         <input type="search" name="ville" id="Ville" placeholder="Marseille, France">
                         <button type="submit">
-                            <div class="rechercher">Rechercher</div>
-                            <div class="loupe">
+                            <span class="rechercher">Rechercher</span>
+                            <span class="loupe">
                               <i class="fa-solid fa-magnifying-glass" style="color: #ffffff"> </i>
-                            </div>
-                          </button>
+                            </span>
+                        </button>
                     </form>
                 </div>    
                     <div class="Filtres"> <!-- Filtres -->
@@ -56,28 +56,28 @@
                         <div class="filtres-texte">
                             <div class="eco-fam">
                                 <div class="eco">
-                                    <i class="fa-solid fa-money-bill-wave fa-lg" style="color: #0065fc;"></i><h4>Economique</h4>
+                                    <i class="fa-solid fa-money-bill-wave fa-lg"></i><h4>Economique</h4>
                                 </div>
                                 <div class="fam">
-                                <i class="fa-solid fa-person fa-lg" style="color: #0065fc;"></i><h4>Familial</h4>
+                                <i class="fa-solid fa-person fa-lg"></i><h4>Familial</h4>
                                 </div>
                             </div>
                             <div class="rom-pep">
                                 <div class="rom">
-                                    <i class="fa-solid fa-heart fa-lg" style="color: #0065fc;"></i><h4>Romantique</h4>
+                                    <i class="fa-solid fa-heart fa-lg"></i><h4>Romantique</h4>
                                 </div>
                                 <div class="pep">
-                                   <i class="fa-solid fa-fire fa-lg" style="color: #0065fc;"></i><h4>Nos pépites</h4>
+                                   <i class="fa-solid fa-fire fa-lg"></i><h4>Nos pépites</h4>
                                 </div>
                             </div>
                         </div>
                     </div>
-                <section class="info-bar">
+                <div class="info-bar">
                     <div class="i">
-                      <i class="fa-solid fa-info fa-sm" style="color: #0065fc" aria-hidden="true"></i>
+                      <i class="fa-solid fa-info fa-sm" aria-hidden="true"></i>
                     </div>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
-                  </section>
+                </div>
             </div> 
             <div class="hebergements-and-populaires">
                 <section class="hebergements"> <!-- card hébergements -->
@@ -93,11 +93,11 @@
                                     <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                                 </div>
                                 <div class="card-rating">
-                                    <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hiSdden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
-                                        <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
+                                    <i class="fa-xs fa-solid fa-star"></i>
+                                        <i class="fa-xs fa-solid fa-star"></i>
+                                        <i class="fa-xs fa-solid fa-star"></i>
+                                        <i class="fa-xs fa-solid fa-star"></i>
+                                        <i class="fa-xs fa-solid fa-star neutralStar"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
                             </article>
@@ -253,10 +253,7 @@
                   <div class="activites-cards">
                     <article class="card">
                       <a href="#" class="card-lien">
-                        <img
-                          src="./images/activites/reno-laithienne.jpg"
-                          alt="Image du port avec bateaux"
-                        />
+                        <img src="./images/activites/reno-laithienne.jpg" alt="Image du port avec bateaux">
                         <div class="card-content">
                             <h3 class="card-title">Vieux-Port</h3>
                         </div>
@@ -264,10 +261,7 @@
                     </article>
                     <article class="card">
                       <a href="#" class="card-lien">
-                        <img
-                          src="./images/activites/paul-hermann.jpg"
-                          alt="Image du Fort de pomègues"
-                        />
+                        <img src="./images/activites/paul-hermann.jpg" alt="Image du Fort de pomègues">
                         <div class="card-content">
                             <h3 class="card-title">Fort de Pomègues</h3>
                         </div>
@@ -275,10 +269,7 @@
                     </article>
                     <article class="card">
                       <a href="#" class="card-lien">
-                        <img
-                          src="./images/activites/kilyan-sockalingum.jpg"
-                          alt="Image du parc national des Calanques"
-                        />
+                        <img src="./images/activites/kilyan-sockalingum.jpg" alt="Image du parc national des Calanques">
                         <div class="card-content">
                             <h3 class="card-title">Parc national des Calanques</h3>
                         </div>
@@ -286,10 +277,7 @@
                     </article>
                     <article class="card">
                       <a href="#" class="card-lien">
-                        <img
-                          src="./images/activites/florian-wehde.jpg"
-                          alt="Image de Notre-Dame-de-la-Garde"
-                        />
+                        <img src="./images/activites/florian-wehde.jpg" alt="Image de Notre-Dame-de-la-Garde">
                         <div class="card-content">
                             <h3 class="card-title">Notre-Dame-de-la-Garde</h3>
                         </div>
@@ -300,35 +288,33 @@
               </div>
             </main>
         <footer> <!-- Footer-->
-          <div class="colonne">
-          <div class="colonne-title">
-            <h3>A propos</h3>
-          </div>
-          <ul class="colonne-text">
-            <li>Fonctionnement du site</li>
-            <li>Conditions générales</li>
-            <li>Données et confidentialité</li>
-          </ul>
-        </div>
-        <div class="colonne">
-          <div class="colonne-title">
-            <h3>Nos Hébergements</h3>
-          </div>
-          <ul class="colonne-text">
-            <li>Charte qualité</li>
-            <li>Proposer votre hôtel</li>
-          </ul>
-        </div>
-        <div class="colonne">
-          <div class="colonne-title">
-            <h3>Assistance</h3>
-          </div>
-          <ul class="colonne-text">
-            <li>Centre d'aide</li>
-            <li>Nous contacter</li>
-          </ul>
-                    </div>
+            <div class="colonne">
+                <div class="colonne-title">
+                    <h3>A propos</h3>
                 </div>
+                <ul class="colonne-text">
+                    <li>Fonctionnement du site</li>
+                    <li>Conditions générales</li>
+                    <li>Données et confidentialité</li>
+                </ul>
+            </div>
+            <div class="colonne">
+                <div class="colonne-title">
+                    <h3>Nos Hébergements</h3>
+                </div>
+                <ul class="colonne-text">
+                    <li>Charte qualité</li>
+                    <li>Proposer votre hôtel</li>
+                </ul>
+            </div>
+            <div class="colonne">
+                <div class="colonne-title">
+                    <h3>Assistance</h3>
+                </div>
+                <ul class="colonne-text">
+                    <li>Centre d'aide</li>
+                    <li>Nous contacter</li>
+                </ul>
             </div>
         </footer>
     </div>
