--- a/booki-starter-code-master/index.html
+++ b/booki-starter-code-master/index.html
@@ -24,8 +24,8 @@
             </div>
             <nav class="menu"> <!-- Barre de navigation -->
                 <ul>
-                    <li><a href="index.html">Hébergements</a></li>
-                    <li><a href="index.html">Activités</a></li>
+                    <li><a href="#hebergements">Hébergements</a></li>
+                    <li><a href="#activites">Activités</a></li>
                 </ul>
             </nav>
         </header>
@@ -80,13 +80,14 @@
                 </div>
             </div> 
             <div class="hebergements-and-populaires">
-                <section class="hebergements"> <!-- card hébergements -->
+                <section class="hebergements" id="hebergements"> <!-- card hébergements -->
                    <div class="hebergements-title">
                         <h2 class="section-title">Hébergements à Marseille</h2>
                    </div>
                    <div class="hebergements-cards">
                         <div class="container">
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/fred-kleber.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel du port</h3>
@@ -100,8 +101,10 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/febrian-zakaria.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Chez Amina</h3>
@@ -115,8 +118,10 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/reisetopia.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel Les mouettes</h3>
@@ -130,10 +135,12 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                         </div>
                         <div class="container">
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/annie-spratt.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Hôtel de la mer</h3>
@@ -147,8 +154,10 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/marcus-loke.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Auberge La Canebière</h3>
@@ -162,8 +171,10 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                             <article class="card">
+                                <a href="#" class="card-lien">
                                 <img src="./images/hebergements/nicate-lee.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                                 <div class="card-txt">
                                     <h3 class="card-title">Auberge Le Panier</h3>
@@ -177,6 +188,7 @@
                                         <i class="fa-xs fa-solid fa-star neutralStar" aria-hidden="true"></i>
                                         <span class="sr-only">Note de 4 sur 5</span>
                                 </div>
+                                </a>
                             </article>
                         </div>
                    </div>
@@ -191,7 +203,9 @@
                         <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
                     </div>
                     <div class="populaires-cards">
+                        <a href="#" class="card-lien">
                         <article class="card">
+                            
                             <img src="./images/hebergements/emile-guillemot.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
                                 <div class="card-txt">
@@ -208,6 +222,8 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
+                        <a href="#" class="card-lien">
                         <article class="card">
                             <img src="./images/hebergements/aw-creative.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
@@ -225,6 +241,8 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
+                        <a href="#" class="card-lien">
                         <article class="card">
                             <img src="./images/hebergements/febrian-zakaria2.jpg" alt="Image de la chambre d'hôtel montrant un lit">
                             <div class="card-content">
@@ -242,10 +260,11 @@
                                 </div>
                             </div>
                         </article>
+                        </a>
                     </div>
                 </section>
             </div>
-            <div class="activites-main"> <!-- Activités Marseille -->
+            <div class="activites-main" id="activites"> <!-- Activités Marseille -->
                 <section class="activites">
                   <div class="activites-title">
                     <h2 class="section-title" id="ancre_activites">Activités à Marseille</h2>
